# rmc

./: .gitignore  CMakeLists.txt  Makefile  build.sh  clean_and_build.sh  client.cpp  client.h  deploy.sh  deploy_all.sh  hostserver.cpp  hostserver.h  logger.h  nicserver.cpp  nicserver.h  normc_client.cpp  onesidedclient.h  rdmaclient.cpp  rdmaclient.h  rdmapeer.cpp  rdmapeer.h  rdmaserver.cpp  rdmaserver.h  rmc.h  rmcclient.cpp  rmcclient.h  rmcserver.cpp  rmcserver.h  server.cpp  server.h  utils.h
benchmarks/contexts/: .gitignore  Makefile  coroboost.cpp  coroboostv2.cpp  func.cpp  rmcs.cpp  threads.cpp
cmake/: dpdk.cmake
include/: client.h  hostserver.h  nicserver.h  onesidedclient.h  rdmapeer.h  rmc.h
scripts/: analyze_client_load.py  analyze_client_tput.py  analyze_output.py  client_hash_load.sh  client_kvstore_load.sh  client_load.sh  client_tput.sh  compile_and_upload.sh  hostserver_load.sh  nicserver_hash_load.sh  nicserver_load.sh  nicserver_tput_sweephop.sh  run_load.sh  runme_benchmarks_bf1.sh  utils.sh
src/: CMakeLists.txt  allocator.h  backend.h  client.cpp  client.h  config.h  corohashtable.h  corormc.h  corosharedlog.h  hostserver.cpp  hostserver.h  log.h  nicserver.cpp  nicserver.h  normc_client.cpp  onesidedclient.cpp  onesidedclient.h  request.cpp  request.h  rmc.h  rmcs.cpp  rmcs.h  rpc.h  scheduler.cpp  scheduler.h
src/lib/: cuckoo_hash.cpp  cuckoo_hash.h  cuckoohash_map.hh  lookup3.cpp  rte_cuckoo_hash.cpp  rte_cuckoo_hash.h
src/rdma/: rdmaclient.cpp  rdmaclient.h  rdmapeer.cpp  rdmapeer.h  rdmaserver.cpp  rdmaserver.h
src/utils/: circularbuffer.h  cxxopts.h  logger.h  utils.h
tests/: .gitignore  Makefile  threads.cpp
tools/: zipf.cpp  zipf_distrib
utils/: utils.h
